# transcriber

./: README.md  pyproject.toml
src/transcriber/: __init__.py  __main__.py  audio.py  checkpoint.py  cli.py  config.py  core.py  display.py  formats.py
