[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transcriber"
version = "0.1.0"
description = "Local audio/video transcription using faster-whisper"
readme = "README.md"
authors = [
    { name = "lsiddd", email = "lucassidpacheco@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.1.0",
    "typer>=0.12.0",
    "rich>=14.0.0",
    "ffmpeg-python>=0.2.0",
    "pyperclip>=1.9.0",
    "tomli-w>=1.1.0",
    "huggingface-hub>=0.23.0",
]

[project.scripts]
transcriber = "transcriber.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/transcriber"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-mock>=3.14"]
